# llm_bank_usecase

./: .dockerignore  .env.custom  .env.example  .env.gemini  .env.qlora  .gitignore  3_MODELS_EXPLAINED.md  API_STARTUP_SUCCESS.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_VISUALIZATION.md  AUDIT_FIX_PLAN.md  AUDIT_ISSUES.md  BANKING_LLM_COMPLETE_SUMMARY.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_PROMPT.md  BENCHMARK_QUICKSTART.md  CAPSTONE_PROPOSAL.md  COLAB_ERROR_FIX_GUIDE.md  COLAB_EXPERIMENT_READY.md  COLAB_QUICKSTART.md  COMPLETE_DELIVERABLES.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPLETION-SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE.md  DISTRIBUTED_SOLUTION_BRAINSTORM.md  DOCUMENTATION-INDEX.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.light  EXECUTION_ROADMAP.md  FEASIBILITY_ALGORITHMS_PROMPT.md  FINAL_SUMMARY.md  GETTING_STARTED.md  HYBRID_ARCHITECTURE_2026.md  HYBRID_SETUP_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  (+48 more)
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: test.yml
LLM_learning/: 01_TRANSFORMER_ARCHITECTURE.md  02_TOKENIZATION.md  03_TRAINING_PIPELINE.md  04_INFERENCE_OPTIMIZATION.md  05_FINETUNING_LORA.md
config/: prometheus.yml
config/grafana/dashboards/: dashboards.yml
config/grafana/datasources/: datasources.yml
data/banking77_finetuning/: dataset_info.json  train_sample.json
data/finetuning/: train.json  val.json
docs/: 01-OVERVIEW.md  02-ARCHITECTURE.md  03-BANKING-USECASES.md  04-API-SPECIFICATIONS.md  05-DATA-MODELS.md  06-INFRASTRUCTURE.md  07-SECURITY-COMPLIANCE.md  DATASET_STRATEGY.md  DOCUMENTATION-STATUS.md  MODEL_STORAGE_STRATEGY.md  PEFT_COMPARISON_2026.md
frontend/: banking_llm_dashboard.html  dashboard.html  index.html  test.html
requirements/: base.txt  dev.txt  gpu.txt  prod.txt
scripts/: execute_complete_pipeline.py  setup-github.sh
src/: __init__.py
src/api/: main.py
src/benchmarks/: comprehensive_benchmark.py  local_rag_setup.py
src/cloud/: __init__.py  google_drive.py
src/database/: __init__.py  connection.py  models.py  supabase_client.py
src/llm/: __init__.py  lm_cache.py  model_factory.py  pipeline.py
src/llm_finetuning/: __init__.py  finetune_llama.py  prepare_banking77.py  prepare_data.py  test_pipeline.py
src/llm_training/: __init__.py  inference.py  lora_trainer.py  tokenizer.py  train.py  transformer.py
src/observability/: __init__.py  logging_config.py  metrics.py  tracing.py
src/security/: audit_logger.py  auth_service.py  encryption.py  pii_detection.py
src/services/: banking_llm_integration.py  banking_service.py  chat_service.py  compliance.py  enhanced_rag_service.py  fraud_detection.py  kyc_service.py  vector_service.py
src/utils/: config.py  logging.py  metrics.py
tests/: test_e2e_integration.py
(+20 files in other folders)
